# hindsight

./: Cargo.toml  README.md  install.sh  jj-docs  plan.md
.github/workflows/: rust.yml
shell/: hindsight.zsh
src/: config.rs  db.rs  item.rs  main.rs  stream.rs
