[package]
name = "hindsight"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.36", features = ["bundled", "vtab"] }
skim = "1.11.2"
crossterm = "0.29"
ratatui = "0.30"
directories = "6.0"
chrono = "0.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"
hostname = "0.4"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.20"

[patch.crates-io]
frizbee = { git = "https://github.com/saghen/frizbee", branch = "main" }
